# vibe-checker

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  concepts.yml  justfile  pyproject.toml
infra/: .gitignore  Pulumi.vibe-checker.yaml  Pulumi.yaml  README.md  __main__.py  architecture.md
legacy/: README.md
pipeline/: README.md  inference.py  prefect.yaml
webapp/: .dockerignore  .prettierrc  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
webapp/app/: app.css  icon.tsx  layout.tsx  page.tsx
webapp/app/[concept_id]/: ConceptPageClient.tsx  page.tsx
webapp/app/[concept_id]/[classifier_id]/: PredictionsPageClient.tsx  page.tsx
webapp/app/api/concepts/: route.ts
webapp/app/api/concepts/[concept_id]/classifiers/: route.ts
webapp/app/api/concepts/[concept_id]/classifiers/[classifier_id]/: route.ts
webapp/app/api/debug/env/: route.ts
webapp/app/api/predictions/: route.ts
webapp/app/api/predictions/[wikibase_id]/[classifier_id]/: route.ts
webapp/app/api/predictions/[wikibase_id]/[classifier_id]/download/: route.ts
webapp/components/: Breadcrumb.tsx  Button.tsx  Card.tsx  ConceptHeader.tsx  ErrorMessage.tsx  ExternalLink.tsx  Input.tsx  LabelledPassage.tsx  LoadingSpinner.tsx  MaterialIcon.tsx  PaginationControls.tsx  PredictionFilters.tsx  SearchBox.tsx
webapp/hooks/: useDebounce.ts
webapp/lib/: api-response.ts  cache.ts  concept-helpers.ts  constants.ts  prediction-filters.ts  s3.ts  ssm.ts  urls.ts
webapp/types/: classifiers.ts  concepts.ts  filters.ts  predictions.ts
