[project]
name = "vibe-checker"
version = "0.1.0"
description = "Climate policy radar vibe checker"
requires-python = ">=3.13"

[project.optional-dependencies]
infra = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-aws>=7.0.0,<8.0.0",
]

pipeline = [
    "prefect[aws]>=3.4.15",
    "rich",
    "typer>=0.15.1",
    "sentence-transformers>=5.1.0",
    "transformers>=4.56.1",
    "knowledge-graph @ git+https://github.com/climatepolicyradar/knowledge-graph@2d2f1f7e10825114bb6419a6b5783700936f5bc4"
]

dev = [
    "pyright>=1.1.0",
]

all = [
    "vibe-checker[infra,pipeline,dev]",
]

[tool.pyright]
include = ["infra/", "pipeline/"]
exclude = ["**/__pycache__"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportMissingImports = false
reportMissingModuleSource = false

