[project]
name = "vibe-checker"
version = "0.1.0"
description = "Climate policy radar vibe checker"
requires-python = ">=3.13"

[project.optional-dependencies]
infra = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-aws>=7.0.0,<8.0.0",
]

pipeline = [
    "prefect[aws]>=3.4.15",
    "rich",
    "torch>=2.8.0",
    "sentence-transformers>=5.1.0",
    "transformers[torch]>=4.55.0",
    "accelerate>=1.6.0",
    "knowledge-graph @ git+https://github.com/climatepolicyradar/knowledge-graph@2d2f1f7e10825114bb6419a6b5783700936f5bc4"
]

dev = [
    "pyright>=1.1.0",
]

all = [
    "vibe-checker[infra,pipeline,dev]",
]

[tool.pyright]
include = ["infra/", "pipeline/"]
exclude = ["**/__pycache__"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportMissingImports = false
reportMissingModuleSource = false

# Use CPU-only PyTorch wheels for pipeline extra, avoiding huge CUDA dependencies
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "pipeline" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "D", "I"]
lint.ignore = [
  "D100",
  "D103",
  "D104",
  "D107",
  "D202",
  "D203",
  "D212",
  "D400",
  "D401",
  "D406",
  "D407",
  "D413",
  "D415",
  "E501",
  "G201",
]

[tool.pylint."messages control"]
disable = ["logging-fstring-interpolation"]  # W1203: allow f-strings in logging
